name:                hs-mesos
version:             0.19.0.0

-- description:         
license:             MIT
license-file:        LICENSE
author:              Ian Duncan
maintainer:          ian@iankduncan.com
-- copyright:           
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     System.Mesos.Executor,
                       System.Mesos.Scheduler,
                       System.Mesos.Resources,
                       System.Mesos.Types,
                       System.Mesos.Internal,
                       System.Mesos.TaskStatus

  -- other-extensions:    
  build-depends:       base >=4.7 && < 5, bytestring, lens
  hs-source-dirs:      src
  default-language:    Haskell2010
  include-dirs:        ext, /usr/include, /usr/local/include/mesos
  c-sources:           ext/types.cpp, ext/scheduler.cpp, ext/executor.cpp
  extra-libraries:     mesos stdc++
  extra-lib-dirs:      /usr/local/lib
  cc-options:          -fPIC -std=c++11
  ghc-options:         -fPIC

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base, hs-mesos, QuickCheck, bytestring, lens
  default-language:    Haskell2010

executable test-executor
  main-is:             TestExecutor.hs
  hs-source-dirs:      test
  build-depends:       base, hs-mesos, bytestring
  default-language:    Haskell2010
  extra-libraries:     mesos stdc++

executable test-framework
  main-is:             TestFramework.hs
  hs-source-dirs:      test
  build-depends:       base, hs-mesos, bytestring, lens
  default-language:    Haskell2010
  extra-libraries:     mesos stdc++
